<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PostJournalActivity">


    <ImageButton
        android:id="@+id/micTitle"
        android:layout_width="41dp"
        android:layout_height="37dp"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_mic_24"
        app:layout_constraintBottom_toTopOf="@+id/post_description_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toEndOf="@+id/post_title_et"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView"
        app:layout_constraintVertical_bias="0.592" />

    <EditText
        android:id="@+id/post_description_et"
        android:layout_width="298dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/thoughts"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_et" />

    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="416dp"
        android:layout_height="195dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/image_three"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="96dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageView"
        app:layout_constraintVertical_bias="0.356"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_title_et"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/post_title"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description_et" />

    <Button
        android:id="@+id/post_save_journal_button"
        android:layout_width="398dp"
        android:layout_height="53dp"
        android:background="@android:color/transparent"
        android:text="@string/save_button"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_progressBar"
        app:layout_constraintVertical_bias="0.562" />

    <TextView
        android:id="@+id/post_username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Ken"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postCameraButton" />

    <TextView
        android:id="@+id/post_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Today"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_username_textview" />

    <ImageButton
        android:id="@+id/micThoughts"
        android:layout_width="44dp"
        android:layout_height="33dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/post_progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/post_description_et"
        app:layout_constraintTop_toBottomOf="@+id/post_title_et"
        app:layout_constraintVertical_bias="0.169"
        app:srcCompat="@drawable/baseline_mic_24" />

</androidx.constraintlayout.widget.ConstraintLayout>